2001-09-26  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-status-bin): Send correct packet for web-aware so
	'eicq-user-meta-web-aware' works.

2001-09-25  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-connect): Test for 'open' not 'run' in
	process-status because it is a network stream.
	(eicq-do-kicked-out): Don't try to auto-reconnect if
	'eicq-delete-offline-messages-flag' is set to "ask".
	(eicq-add-user): New.
	(eicq-add-user-p): New.
	(eicq-new-buddy): New.
	(eicq-new-uin): New.
	(eicq-do-info): Handle doing a 'eicq-add-user'.
	(eicq-add-new-user-to-buddy-buffer): New.
	(eicq-do-search-end): Use it.

2001-09-23  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-pack-search-by-uin): Changed to a defconst.
	(eicq-search-by-uin): New.

2001-09-18  Erik Arneson  <erik@aarg.net>

	* eicq.el (eicq-connect): Removed check for `eicq-bridge-port', as
	some folks might want to set variable before running
	`eicq-connect'.  Besides, we're already checking
	`eicq-bridge-local-p'.
	(eicq-disconnect): Check to see if a symbol indicates a live
	buffer before killing it.

2001-09-19  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-logout): Reset counters in EicqWharf to zero.
	(eicq-logout): Test for EicqWharf before trying to reset it.

2001-09-17  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-logout): Do a 'eicq-world-update' and
	'eicq-send-contact-list' to reset the buddy buffer to it's
	"pre-logged-in-state". 

2001-09-16  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-show-window): Emergency fix - I left out a
	'select-frame'. 
	(eicq-disconnect): Emergency fix - Uncomment something I'd
	commented out for debugging purposes.
	(eicq-do-kicked-out): Test for 'eicq-user-password', don't attempt
	auto-reconnect if it's nil.

2001-09-15  Steve Youngs  <youngs@xemacs.org>

	* Version 0.2.16 released.

	* README: Add comments about EicqWharf and starting Eicq in a new
	frame. 

	* eicq.el (eicq-save-log-on-exit-p): New.